feat: Implement real-time chat and messaging functionality with WebSocket integration and user management.